Padronizando as requests e responses

--- a/Dima.Api/Dima.Api.csproj
+++ b/Dima.Api/Dima.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>8c16209c-d6f3-4537-b2dc-26f9f3c585f8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
