--- a/Dima.Api/appsettings.json
+++ b/Dima.Api/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "FrontendUrl": "http://localhost:0000",
+  "BackendUrl": "https://localhost:5281",
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
